--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/students_management
+spring.datasource.url=jdbc:mysql://localhost:3306/school_management
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
