Se reestablece el back

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:mysql://yjo6uubt3u5c16az.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/g5az5imno9mzeqrc
-spring.datasource.username=zvc1zdv9w8g6br3j
-spring.datasource.password=bnd6mfj9d9uckj3g
+spring.datasource.url=jdbc:mysql://localhost:3306/school_management
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialectic=org.hibernate.dialect.MySQL55Dialect
-spring.datasource.initialization-mode=always
